# alfa-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alfa_challenge/: feature_selection.ipynb  features_aggs.ipynb  features_coles.ipynb  features_tsfresh.ipynb  final_blend.ipynb  kaggle_training_stage.ipynb  modelling_catboost_MAE.ipynb  modelling_catboost_MAPE.ipynb  train_test_splits.ipynb  utils.py
data/feature_selection/: selected_features_1000.json  selected_features_500.json
docs/: readme_pic.excalidraw
notebooks/: baseline.ipynb  coles.ipynb  convert_to_parquet_json.ipynb  dynamic_substraction.ipynb  feature_selection_1000.ipynb  feature_selection_500.ipynb  features.ipynb  final_blend.ipynb  full_features.ipynb  modelling MAPE.ipynb  modelling MAPE_500.ipynb  modelling.ipynb  modelling_autogluon_MAE copy.ipynb  modelling_autogluon_MAPE.ipynb  train_test.ipynb  tsfresh.ipynb
submissions/: 500_features_autogluon_MAE_unsubmitted-0.5.csv  500_features_autogluon_MAE_unsubmitted.csv  500_features_autogluon_MAPE-0.5.csv  500_features_autogluon_MAPE.csv  500_features_catboost_MAPE.csv  500_features_catboost_MAPE_BLEND_WITH_full_features_catboost-0.5.csv  baseline.csv  catboost_first_test.csv  full_features_catboost-0.5.csv  full_features_catboost-1.csv  full_features_catboost-quadratic_scaling.csv  full_features_catboost.csv  full_features_catboost0.5.csv  full_features_catboost_MAPE.csv  new_features.csv  new_features_2.csv  regressor_test.csv  ts_fresh_features_test.csv  ts_fresh_features_test_2.csv
